--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b+jtZ1PyTaNFu82vJ2xDiyP2qFhisuzPdgXoJKUOT+Tz45UG/kBQAo4F38K3UXAw4satT6FhcFGfqADINha38ILLRog32g8qE4RdwraHsUKtNq4An2A30Icwxs61XvDh">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LtDW5FA87+Q3Ap8MINZtkhgKpnEglQhMjfJv1vptEq7bhWqp6Ey6fxCby578UIDSjj6DufFfZFPYe/x2bN0Qh/9IG0UhtFHkatBrx8U9yvohmFoQ8w981nVbrrPgOa38">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
